Fixed overflow and scroll behavior

--- a/src/components/ChatArea/ChatArea.css
+++ b/src/components/ChatArea/ChatArea.css
@@ -1,15 +1,15 @@
 .chatArea {
   display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column-reverse;
 
+  flex-grow: 1;
   width: 100%;
 
   background: url(../../assets/bg-chat-room.png) rgba(15, 24, 30, 0.5);
-  overflow-y: scroll;
 
-  scrollbar-width: 6px;
+  overflow-y: auto;
+
   scrollbar-color: rgba(255, 255, 255, 0.16) transparent;
 }
 
