--- a/src/components/MessageRow/MessageRow.css
+++ b/src/components/MessageRow/MessageRow.css
@@ -9,8 +9,12 @@
   padding: 0 40px;
 }
 
-.messageRow:last-child {
+.messageRow:first-child {
   margin-bottom: 16px;
+}
+
+.messageRow:last-child {
+  margin-top: 16px;
 }
 
 .messageRow.outgoing {
